--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,7 @@
         <title>
             Lokesh
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://kit.fontawesome.com/57b1f5d7e8.js" crossorigin="anonymous"></script>
     </head>
@@ -12,25 +13,25 @@
             <nav class="navigation">
                 <ul class="horizontal-list text-center">
                     <li>
-                        <a href="#para-about"> Home </a>
+                        <a href="#"> Home </a>
                     </li>
                     <li>
-                        <a href="#"> About </a>
+                        <a href="#para-about"> About </a>
                     </li>
                     <li>
-                        <a href="#"> Skills </a>
+                        <a href="#skills"> Skills </a>
                     </li>
                     <li>
-                        <a href="#"> Experience </a>
+                        <a href="#experience"> Experience </a>
                     </li>
                     <li>
-                        <a href="#"> Education </a>
+                        <a href="#education"> Education </a>
                     </li>
                     <li>
-                        <a href="#"> Portfolio </a>
+                        <a href="#portfolio"> Portfolio </a>
                     </li>
                     <li>
-                        <a href="#"> Contact </a>
+                        <a href="#contact"> Contact </a>
                     </li>
                 </ul>
             </nav>
@@ -254,7 +255,27 @@
                         <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
                         <div class="portfolio-details">
                             <p>
-                                Write here basic details about the project.
+                                <ul>
+                                    <li>
+                                        Python Complete Course for Beginners
+                                    </li>
+                                    <li>
+                                        Certificate of Participation in Techudyam 2022, 4thNational Student Symposium.
+                                    </li>
+                                    <li>
+                                        Certificate of Presenting paper in REPSI-2022
+                                    </li>
+                                    <li>
+                                        Certificate of 4 week-In-House Training on Implementation of Artificial Intelligence.
+                                    </li>
+                                    <li>
+                                        Certificate of Completion “Intro to JAVA ”(Coding Ninjas).
+                                    </li>
+                                    <li>
+                                        Certificate of Completion “Data Structures in JAVA ”(Coding Ninjas).
+                                    </li>
+
+                                </ul>
                             </p>
                         </div>
     
@@ -271,9 +292,14 @@
                     <div class="portfolio-image-container">
                         <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000029_1550237386_project.jpeg">
                         <div class="portfolio-details">
-                            <p>
-                                Write here basic details about the project.
-                            </p>
+                                <ul>
+                                    <li>
+                                        Study of Optimization techniques for optimal location of FACTS devices. 
+                                    </li>
+                                    <li>
+                                        FACTS location and sizing: A comparative analysis between metaheuristic algorithms.
+                                    </li>
+                                </ul>
                         </div>
     
                     </div>
